DeveloperOrg/force-app/main/default/objects/Asset_Allocation__c/Asset_Allocation__c.object-meta.xml
<CustomObject>
    <label>Asset Allocation</label>
    <nameField>
        <displayFormat>Asset {0}</displayFormat>
        <label>Asset Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>