DeveloperOrg/force-app/main/default/objects/Asset_Allocation__c/fields/Allocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Status__c</fullName>
    <label>Allocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>