DeveloperOrg/force-app/main/default/objects/Asset_Allocation__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hand Tools</fullName>
            </value>
            <value>
                <fullName>Power Tools</fullName>
            </value>
            <value>
                <fullName>Heavy Equipment</fullName>
            </value>
            <value>
                <fullName>Specialized Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>