DeveloperOrg/force-app/main/default/objects/Asset_Allocation__c/fields/Equipment_Tool__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Tool__c</fullName>
    <label>Equipment Tool</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Equipment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hammer</fullName>
            </value>
            <value>
                <fullName>Screwdriver</fullName>
            </value>
            <value>
                <fullName>Wrench</fullName>
            </value>
            <value>
                <fullName>Pliers</fullName>
            </value>
            <value>
                <fullName>Chisel</fullName>
            </value>
            <value>
                <fullName>Hacksaw</fullName>
            </value>
            <value>
                <fullName>Mallet</fullName>
            </value>
            <value>
                <fullName>Drill machine</fullName>
            </value>
            <value>
                <fullName>Angle grinder</fullName>
            </value>
            <value>
                <fullName>Circular saw</fullName>
            </value>
            <value>
                <fullName>Heat gun</fullName>
            </value>
            <value>
                <fullName>Welding machine</fullName>
            </value>
            <value>
                <fullName>Electric sander</fullName>
            </value>
            <value>
                <fullName>Excavator</fullName>
            </value>
            <value>
                <fullName>Bulldozer</fullName>
            </value>
            <value>
                <fullName>Crane</fullName>
            </value>
            <value>
                <fullName>Forklift</fullName>
            </value>
            <value>
                <fullName>Concrete mixer</fullName>
            </value>
            <value>
                <fullName>Backhoe loader</fullName>
            </value>
            <value>
                <fullName>Measuring tape</fullName>
            </value>
            <value>
                <fullName>Spirit level</fullName>
            </value>
            <value>
                <fullName>Clamp</fullName>
            </value>
            <value>
                <fullName>Grease gun</fullName>
            </value>
            <value>
                <fullName>Torque wrench</fullName>
            </value>
            <value>
                <fullName>Pipe cutter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>