DeveloperOrg/force-app/main/default/objects/Asset_Allocation__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Asset Allocation</relationshipLabel>
    <relationshipName>Asset_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>